add baidu count

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,10 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+    <script type="text/javascript">
+		var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+		document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F69f9a8e097a1218542b7538b0d07f321' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+
+
 </head>
