--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,10 @@
 
     {% include footer.html %}
 
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3f52c7e3f6001b0f28c64722ff41e936' type='text/javascript'%3E%3C/script%3E"));
+</script>
+
     </body>
 </html>
