--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
   {{ content }}
   </article>
 
+<!-- Page Nmuber - Begin -->
   {% if page.previous  %}
         <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
   {% else %}
@@ -23,5 +24,22 @@ layout: default
   {% else %}
         <span>Next &raquo;</span>
   {% endif %}
-
 </div>
+
+<!-- Page Number - End -->
+<!-- 多说评论框 start -->
+<div class="ds-thread" data-thread-key="post.id" data-title="post.title" data-url="post.url"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"marsluo"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0]
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
