--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
 
 <!-- Page Number - End -->
 <!-- 多说评论框 start -->
-<div class="ds-thread" data-thread-key="{{post.id}}" data-title="{{post.title}}" data-url="{{post.url}}"></div>
+<div class="ds-thread" data-thread-key="{{page.id}}" data-title="{{page.title}}" data-url="{{ site.url }}{{page.url}}"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
