--- a/_layouts/archive-years.html
+++ b/_layouts/archive-years.html
@@ -7,14 +7,14 @@ title: Archive
 ================================================== -->
 <section class="recent-posts">
 <div class="section-title mt-2">
-    <h2>Archive of posts from <span>{{ page.type }} '{{ page.title }}'</span></h2>
+    <h2>{{ page.title }} 年 </h2>
 </div>
 <div class="row listrecent">
 
 {% for post in site.posts %}
 {% assign postyear = post.date | date: "%Y" %}
 {% if postyear == page.year %}
-    {% include postbox.html %}
+    {% include post.html %}
 {% endif %}    
 
 {% endfor %}
